# az-diagram-autogen

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: awesome-copilot-contributor.agent.md  diagram-quality-guardian.agent.md  diagram-tester.agent.md
.github/skills/az-autopilot-agent/: CONTRIBUTING.md  README.ko.md  README.md  SKILL.md
.github/skills/az-autopilot-agent-core/: .gitignore  CONTRIBUTING.md  README.ko.md  README.md  SKILL.md
.github/skills/az-autopilot-agent-core-en/: README.md  SKILL.md
.github/skills/az-autopilot-agent-core-en/references/: bicep-generator.md  phase1-advisor.md
.github/skills/az-autopilot-agent-core-en/scripts/: REFERENCE.md  cli.py  generator.py
.github/skills/azure-arch-builder/: CONTRIBUTING.md  README.ko.md  README.md  SKILL.md
.github/skills/azure-arch-builder-v2/: README.ko.md  README.md  SKILL.md
.github/skills/azure-arch-builder-v3/: CONTRIBUTING.md  README.ko.md  README.md  SKILL.md
.github/skills/azure-arch-builder-v4/: CONTRIBUTING.md  README.ko.md  README.md  SKILL.md
.github/skills/azure-arch-builder/dev/: evals.json
.github/skills/azure-architecture-autopilot/: README.md
.github/skills/azure-architecture-autopilot-kr/: CONTRIBUTING.md  README.ko.md  README.md  SKILL.md
.github/skills/azure-architecture-autopilot-pip-kr/: CONTRIBUTING.md  README.ko.md  README.md  SKILL.md
.github/skills/revealjs-presentation-builder/: README.md  SKILL.md
0000012/: 01_arch_diagram_draft.html
0066/: 01_arch_diagram_draft.html  main.bicep  main.bicepparam  main.json
0066/modules/: foundry.bicep  keyvault.bicep  network.bicep  private-endpoints.bicep  search.bicep  storage.bicep
az-diagram-autogen/: .gitignore  LICENSE  README.md  pyproject.toml
az-diagram-autogen/az_diagram_autogen/: __init__.py  cli.py  generator.py
az-diagram-autogen/docs/images/: basic_rag.html  landing_zone.html  private_rag.html
az-diagram-autogen/examples/: basic_rag.json  landing_zone.json
az-diagram-autogen/tests/: test_cross_sync.py  test_e2e.py  test_visual_render.py
az_diagram_autogen/: REFERENCE.md  __init__.py  cli.py  generator.py
examples/: private_rag.json
ml-regression/: 01_arch_diagram_draft.html  02_arch_diagram_preview.html  03_arch_diagram_result.html  main.bicep  main.bicepparam  main.json
ml-regression/modules/: keyvault.bicep  ml-workspace.bicep  monitoring.bicep  network.bicep  private-endpoints.bicep  storage.bicep
presentation/: index.html
rag-chat-func/: 01_arch_diagram_draft.html
tests/: test_cli.py  test_cross_sync.py  test_generator.py  test_icon_resolution.py  test_icons.py  test_pe_detection.py  test_type_normalization.py  test_visual_render.py
(+194 files in other folders)
