[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "az-diagram-autogen"
version = "0.1.4"
description = "Interactive Azure architecture diagram generator with 636 official Azure icons"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{name = "Jeonghoon Lee"}]
keywords = ["azure", "architecture", "diagram", "visualization", "infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
az-diagram-autogen = "az_diagram_autogen.cli:main"

[project.urls]
Homepage = "https://github.com/whoniiii/az-diagram-autogen"
Issues = "https://github.com/whoniiii/az-diagram-autogen/issues"

[tool.setuptools.package-data]
az_diagram_autogen = ["REFERENCE.md"]

[tool.setuptools.packages.find]
include = ["az_diagram_autogen*"]
